demo_app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awscli-app
  name: awscli-app
  namespace: test-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: awscli-app
  template:
    metadata:
      labels:
        app: awscli-app
    spec:
      serviceAccountName: s3-reader
      containers:
      - name: aws-cli-app
        image: amazon/aws-cli:latest
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          runAsUser: 1
        command: ["sleep", "infinity"]
