demo_app_1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awscli-app
  #name: awscli-app
  name: awscli-app
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awscli-app
  template:
    metadata:
      labels:
        app: awscli-app
    spec:
      serviceAccountName: ecr-cronjob-sa
      containers:
      - name: aws-cli-app
        #image: alpine/k8s:1.32.11
        image: 509399617800.dkr.ecr.us-east-1.amazonaws.com/myapp-repo:latest
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          runAsUser: 1
        #command: ["sleep", "infinity"]
